<resources>
    <string name="app_name">Launcher Control</string>
    <string name="launcher_control">Launcher Control</string>
    <string name="back">Back</string>
    <string name="unit_1">Unit 1</string>
    <string name="unit_2">Unit 2</string>
    <string name="unit_3">Unit 3</string>
    <string name="unit_4">Unit 4</string>
    <string name="gateway_settings">Gateway Settings</string>
    <string name="no_gateway_selected">No Gateway Selected</string>
    <string name="select_device">Select Device</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="test_unit_1">Test Unit 1</string>
    <string name="test_unit_2">Test Unit 2</string>
    <string name="test_unit_3">Test Unit 3</string>
    <string name="test_unit_4">Test Unit 4</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="connection_configuration">Connection Configuration</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="no_device_found">No Device Found!</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_device_confirmation_msd">Are you sure you want delete this device?</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_not_available_title">Bluetooth not available</string>
    <string name="bluetooth_not_available_message">Bluetooth is not available in this device. Please try with another device.</string>
    <string name="ok">Ok</string>
    <string name="device_uuid_colon">Device UUID: %s</string>
    <string name="bluetooth_feature_not_available_in_this_device">Bluetooth feature not available in this device</string>
    <string name="please_on_bluetooth_to_use_this_features">Please on bluetooth to use this features</string>
    <string name="please_allow_bluetooth_permission_to_use_this_features">Please allow bluetooth permission to use this features</string>
    <string name="main_configuration">Main Configuration</string>
    <string name="device_settings">Device and APP Settings</string>
    <string name="sound_option_installed">Sound option installed</string>
    <string name="servo_version">Servo version</string>
    <string name="unit_no_colon">Unit %d:</string>
    <string name="no_of_channels">%d channels</string>
    <string name="sound_and_fire_settings">Sound &amp; Fire settings</string>
    <string name="sound_and_fire_settings_desc">Sound &amp; Fire function is performed by a longgpress on the \'Fire button\'. According to the settings below, the unit will play sound %d time(s) and wait %d second(s) before the next available channel is fired. If the sound is performed more than 1 time, the time between two sounds is %d second(s).</string>
    <string name="sound_count_colon">Sound Count:</string>
    <string name="sound_delay_colon">Sound Delay:</string>
    <string name="fire_delay_colon">Fire Delay:</string>
    <string name="sound_count_desc">The unit will play sound %d time(s)</string>
    <string name="sound_delay_desc">Time delay of %d second(s) starting sound again.</string>
    <string name="fire_delay_desc">There will be a delay of %d second(s) between sound and fire.</string>
    <string name="sec">sec</string>
    <string name="show_bluetooth_audio">Show bluetooth audio</string>
    <string name="setting_note">Note: Preinstalled sound files saved from www.freesoundslibrary.com and shortened. Use under Creative Commons License BY4.0 https://creativecommons.org/licenses/by/4.0/</string>
    <string name="stay_armed_for_colon">Stay armed for:</string>
    <string name="stay_armed_desc">The connected unit will stay armed %d seconds before disarming automatically.</string>
    <string name="autoupdate_pressure">Autoupdate Pressure</string>
    <string name="autoupdate_pressure_on_desc">Switch off to save battery life on remote control.</string>
    <string name="autoupdate_pressure_off_desc">Switch on to get update from pressure automatically.</string>
    <string name="autoupdate_interval_colon">Autoupdate interval:</string>
    <string name="autoupdate_interval_desc">Remote sends update request to connected unit every %d second(s).</string>
    <string name="gunshot_after_launch">Gunshot After Launch</string>
    <string name="gunshot_after_launch_desc">Switch ON to perform a gunshot sound 1 second after Fire.</string>
    <string name="advanced_control_is_standard">Advanced Control is standard</string>
    <string name="advanced_control_is_standard_on_desc">Switch OFF to have simple control as standard control. With this setting off, you can still go to advanced control by performing a long press on the square unit number button.</string>
    <string name="advanced_control_is_standard_off_desc">Switch ON to have advanced control as standard control. With this setting on, you can still go to simple control by performing a long press on the square unit number button.</string>
    <string name="randomize_sound_and_fire">Randomize Sound &amp; Fire</string>
    <string name="randomize_sound_and_fire_desc">When ON, sound count, delays and sound choice can be randomized on each long press.</string>
    <string name="random_sound_count">Random Sound Count</string>
    <string name="random_sound_count_desc">When ON, number of sounds per run is random between min and max below.</string>
    <string name="random_sound_count_validation">Range 1…5; max must be larger than min.</string>
    <string name="random_sound_delay">Random Sound Delay</string>
    <string name="random_sound_delay_desc">When ON, delay between two sounds is random between min and max below.</string>
    <string name="random_sound_delay_validation">Range 2…10 sec; max must be larger than min.</string>
    <string name="random_fire_delay">Random Fire Delay</string>
    <string name="random_fire_delay_desc">When ON, delay between last sound and fire is random between min and max below.</string>
    <string name="random_fire_delay_validation">Range 2…10 sec; max must be larger than min.</string>
    <string name="randomize_sound">Randomize Sound</string>
    <string name="randomize_sound_desc">When ON, a random sound from the enabled sounds below is played.</string>
    <string name="same_sound_for_multiple_sounds">Same sound for multiple sounds</string>
    <string name="same_sound_for_multiple_sounds_desc">When ON, one random sound is chosen per run and used for every play in that run. When OFF, each play can be a different random sound.</string>
    <string name="using_sound_1">using Sound Duck</string>
    <string name="using_sound_2">using Sound Pheasant</string>
    <string name="using_sound_3">using Sound Goose</string>
    <string name="using_sound_4">using Sound Brrr</string>
    <string name="using_sound_5">using Sound Gunshot</string>
    <string name="using_sound_6">using Sound Magpie</string>


    <string name="trying_to_connect">Trying to connect…</string>
    <string name="connection_fail">Connection Failed</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="unit_test_completed_successfully">Unit %d test completed successfully.</string>
    <string name="unit_test_completed_failed">Unit %d test failed.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_response">No Response</string>
    <string name="no_response_msg">No Response from unit - %d. Do you want to reload?</string>
    <string name="reload_unit">Reload Unit</string>
    <string name="no_channel_available_msg">No channels available for unit - %s. Do you want to reload?</string>
    <string name="fire_channel">Fire Channel</string>
    <string name="do_you_want_to_fire_channel_x">Do you want to fire channel %d again?</string>
    <string name="channel_n_successfully_initialized">Channel %d successfully initialized</string>
    <string name="ch">Ch</string>
    <string name="bar">bar</string>
    <string name="fail">Fail</string>
    <string name="unit_successfully_initialized">Unit successfully initialized</string>
    <string name="channel_fired_successfully">Channel %d fired successfully</string>
    <string name="add_on_features_on_unit">Add-on features on unit %d</string>
    <string name="select_sound_for_unit">Select sound for unit %d</string>
    <string name="operation_unit_n_n">Operation Unit %d/%d</string>
    <string name="operation_timed_out">Operation timed out</string>
    <string name="peripheral_service_not_found">Peripheral service(s) not found: %s</string>
    <string name="peripheral_charac_not_found">Peripheral charac(s) not found: %s</string>
    <string name="please_set_channels_in_main_configuration">Please set channels in main configuration</string>
    <string name="device_not_found">Device not found!</string>
    <string name="channel_not_available">Channel not available</string>
    <string name="signal_sent_to_unit">Signal sent to unit %d</string>
    <string name="permission_required">Permission must be enable for scanning BLE devices.</string>
    <string name="device_voltage">Device Voltage: %s</string>
    <string name="device_firmware">Firmware: %s</string>
    <string name="please_save_gateway_for_connection">Please save Gateway\nfor Connection</string>
    <string name="please_set_up_units_in_main_configuration">Please set-up Units in Main\nConfiguration</string>
    <string name="connecting">Connecting…</string>
    <string name="gateway_not_connected">Gateway Not\nConnected</string>
    <string name="connected_to_gateway">Connected to\nGateway\n\nPlease select unit\nto Operate</string>
    <string name="reload">Reload</string>
    <string name="update">Update</string>
    <string name="sound">Sound</string>
    <string name="no_unit_is_selected">No unit is selected</string>
    <string name="trying_again">Trying again…</string>
    <string name="disarmed_unit_n_tap_to_arm_here"><![CDATA[DISARMED\nUnit %s\n\ntap to arm\n>HERE<]]></string>
    <string name="play">Play</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="update_pressure_manual">Update Pressure\nMANUAL</string>
    <string name="update_pressure_auto">Update Pressure\nAUTO</string>
    <string name="unit_x_servo_control">Unit %d\nSERVO CONTROL</string>
    <string name="update_unit_x">Update Unit %d</string>
</resources>