<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.launcher_control_android.main.ui.connection_config.model.ConnectionConfigVM" />

        <variable
            name="click"
            type="android.view.View.OnClickListener" />

        <variable
            name="showSecondaryProgress"
            type="androidx.databinding.ObservableField&lt;Boolean&gt;" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.ui.connection_config.view.ConnectionConfigAct">

        <include
            android:id="@+id/toolbar"
            layout="@layout/lay_toolbar"
            app:click="@{click}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showBack="@{true}"
            app:title="@{@string/connection_configuration}" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingBottom="@dimen/_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_app_window_bg" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/gateway_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_no_gateway_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/no_gateway_selected"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_select_device"
            app:layout_constraintEnd_toStartOf="@id/btn_select_device"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_select_device" />

        <TextView
            android:id="@+id/btn_select_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:onClick="@{click::onClick}"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_10dp"
            android:paddingVertical="@dimen/_6dp"
            android:text="@string/select_device"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_no_gateway_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.savedBluetoothDevice == null}"
            tools:visibility="visible"
            app:constraint_referenced_ids="tv_no_gateway_selected, btn_select_device" />

        <TextView
            android:id="@+id/tv_selected_gateway_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:text="@{vm.savedBluetoothDevice.name}"
            tools:text="Ankit's Mackbook Air"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_delete"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_delete" />

        <TextView
            android:id="@+id/tv_selected_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            android:text="@{@string/device_uuid_colon(vm.savedBluetoothDevice.address)}"
            tools:text="Device UUID: 340,000,000,000,000,000,000,000,000,000,000,000,000"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="@id/btn_delete"
            app:layout_constraintStart_toStartOf="@id/tv_selected_gateway_name"
            app:layout_constraintTop_toBottomOf="@id/btn_delete" />

        <TextView
            android:id="@+id/tv_voltage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            tools:text="Device Voltage: 3.77V"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/iv_voltage"
            app:layout_constraintStart_toStartOf="@id/tv_selected_gateway_name"
            app:layout_constraintTop_toBottomOf="@id/tv_selected_device" />

        <TextView
            android:id="@+id/tv_firmware"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6dp"
            tools:text="Firmware: 0.6"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/iv_voltage"
            app:layout_constraintStart_toStartOf="@id/tv_voltage"
            app:layout_constraintTop_toBottomOf="@id/tv_voltage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_voltage"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/_6dp"
            app:srcCompat="@drawable/battery50"
            android:visibility="gone"
            tools:visibility="visible"
            android:alpha="0.5"
            android:scaleX="-1"
            app:layout_constraintEnd_toEndOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="@id/tv_voltage"
            app:layout_constraintBottom_toBottomOf="@id/tv_voltage"/>

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:onClick="@{click::onClick}"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_30dp"
            android:paddingVertical="@dimen/_6dp"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_firmware" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_selected_gateway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.savedBluetoothDevice != null}"
            tools:visibility="visible"
            app:constraint_referenced_ids="tv_selected_gateway_name, tv_selected_device, btn_delete, divider, btn_unit_1, btn_unit_2, btn_unit_3, btn_unit_4" />

        <TextView
            android:id="@+id/btn_unit_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/test_unit_1"
            android:onClick="@{click::onClick}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_unit_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/btn_unit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/test_unit_2"
            android:onClick="@{click::onClick}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_unit_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_unit_1" />

        <TextView
            android:id="@+id/btn_unit_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/test_unit_3"
            android:onClick="@{click::onClick}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_unit_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_unit_2" />

        <TextView
            android:id="@+id/btn_unit_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/shape_rect_rounded_border_4"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/test_unit_4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:onClick="@{click::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_unit_3" />

        <Button
            android:id="@+id/btn_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Demo Button"
            android:layout_margin="@dimen/_20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            layout="@layout/progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:showProgress="@{showSecondaryProgress}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>